<resources>
    <string name="app_name">Medidor de Consumo</string>
    <string name="action_settings">Opcoes</string>
    <string name="Falha_conexao">Falha de conexão</string>
    <string name="success_connection">Conexão OK!</string>
    <string name="ON">Ligado</string>
    <string name="OFF">Desligado</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Desligado">Desligado!</string>
    <string name="timercancel">Timer Cancelado!</string>
    <string name="timeractive">Timer Ativado!</string>
    <string name="device">Dispositivo</string>
    <string name="notoffchannel">Dispositivo Desligado</string>
    <string name="notoffdesc">Apresenta ao desligar dispositivo através de Timer</string>
    <string name="Aconsume">Consumo Atual:</string>
    <string name="Medconsume">Consumo Médio:</string>
    <string name="Maxconsume">Consumo Máximo:</string>
    <string name="Monconsume">Consumo em Reais:</string>
    <string name="ZeroPower">0 W</string>
    <string name="ZeroVoltage">0 V</string>
    <string name="ZeroCurrent">0 A</string>
    <string name="ZeroMoney">0 R$/Hora</string>
    <string name="allInfo">Informações Gerais</string>
    <string name="voltage">Tensão:</string>
    <string name="current">Corrente:</string>
    <string name="meanPower">Consumo Médio:</string>
    <string name="minPower">Consumo Mínimo:</string>
    <string name="meanCost">Gasto Médio:</string>
    <string name="dataDefault">Resposta</string>
    <string name="plusButtonDescription">Botão para adicionar dispositivos</string>
    <string name="dialogPriceHint">Preço do KWh em R$</string>
    <string name="dialogPriceOk">Atualizar</string>
    <string name="dialogPriceCancel">Cancelar</string>
    <string name="preference_file_key">com.example.medidorconsumo.PREFERENCE_FILE_KEY</string>
    <string name="kwhPrice_file_key">kwhprice.PREFERENCE_FILE_KEY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ordem_alfab_tica">Ordem alfabética</string>
    <string name="timer">Timer</string>
    <string name="remover">Remover</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>
